--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -306,14 +306,7 @@ $graphqlQuery = $query ?: "
                                     <a class="justify-center w-auto mr-auto btn btn-primary"
                                        :href="'<?= $escaper->escapeUrl($block->getBaseUrl()) ?>' +
                                             product.url_key + product.url_suffix">
-                                        <svg class="inline w-6 h-6 border-current" fill="none" viewBox="0 0 24 24"
-                                             stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293
-                                                  2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2
-                                                  0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"/>
-                                        </svg>
-                                        <span class="inline">Add to cart</span>
+                                        <span class="inline"><?= $escaper->escapeHtml(__('View Product')) ?></span>
                                     </a>
                                     <button
                                         @click.prevent="addToWishlist(product.id)"
