--- a/Magento_ProductAlert/templates/product/price.phtml
+++ b/Magento_ProductAlert/templates/product/price.phtml
@@ -6,7 +6,7 @@
  * See https://hyva.io/license
  */
 
-use Hyva\Theme\ViewModel\Product\Alert as ProductAlertViewModel;
+use Hyva\Theme\ViewModel\Product\ProductAlert as ProductAlertViewModel;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 
