--- a/Magento_ProductAlert/templates/product/stock.phtml
+++ b/Magento_ProductAlert/templates/product/stock.phtml
@@ -22,9 +22,9 @@ $productAlertViewModel = $viewModels->require(ProductAlert::class);
 /** @var CurrentProduct $currentProduct */
 $currentProduct = $viewModels->require(CurrentProduct::class);
 /** @var Product $product */
-$product = $currentProduct->exists() ? $currentProduct->get() : false;
+$product = $currentProduct->get();
 
-if (!$product || !$productAlertViewModel->showStockAlert($product)) {
+if (!$currentProduct->exists() || !$productAlertViewModel->showStockAlert($product)) {
     return;
 }
 
