--- a/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/Magento_Catalog/templates/product/view/product-info.phtml
@@ -8,6 +8,7 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
 use Magento\Catalog\Model\Product;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
@@ -16,6 +17,7 @@ use Hyva\Theme\ViewModel\ProductPage;
 
 /** @var Template $block */
 /** @var Escaper $escaper */
+/** @var ViewModelRegistry $viewModels */
 
 /** @var ProductPage $productViewModel */
 $productViewModel = $block->getProductViewModel();
