--- a/Magento_ReCaptchaFrontendUi/templates/js/script_token.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/js/script_token.phtml
@@ -8,13 +8,20 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
 use Magento\Framework\Escaper;
 use Hyva\Theme\ViewModel\StoreConfig;
+use Magento\Framework\View\Element\Template;
 
+/** @var Template $block */
 /** @var Escaper $escaper */
-/** @var StoreConfig $storeConfig */
+/** @var ViewModelRegistry $viewModels */
 
+/** @var StoreConfig $storeConfig */
+// could not test this yet:
+//$storeConfig = $viewModels->require(StoreConfig::class);
 $storeConfig = $block->getData('viewModelStoreConfig');
+
 $siteKey = $storeConfig->getStoreConfig('recaptcha_frontend/type_recaptcha_v3/public_key');
 ?>
 <?php if ($siteKey): ?>
