Remove TotalsOutput view model from layout XML

--- a/Magento_Checkout/layout/checkout_cart_index.xml
+++ b/Magento_Checkout/layout/checkout_cart_index.xml
@@ -33,13 +33,7 @@
                 <block name="items" template="Magento_Checkout::cart/items.phtml"/>
                 <block name="coupon" class="Magento\Checkout\Block\Cart\Coupon"
                        template="Magento_Checkout::cart/coupon/form.phtml"/>
-                <block name="totals" template="Magento_Checkout::cart/totals.phtml">
-                    <arguments>
-                        <argument name="viewModelTotalsOutput"
-                                  xsi:type="object">Hyva\Theme\ViewModel\Cart\TotalsOutput
-                        </argument>
-                    </arguments>
-                </block>
+                <block name="totals" template="Magento_Checkout::cart/totals.phtml"/>
                 <block name="empty" template="Magento_Checkout::cart/noItems.phtml"/>
                 <block name="checkout.cart.methods.bottom" class="Magento\Checkout\Block\Cart"
                        template="Magento_Checkout::cart/methods.phtml">
