--- a/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
@@ -11,8 +11,8 @@ declare(strict_types=1);
 use Magento\Catalog\Block\Product\ProductList\Toolbar;
 use Magento\Framework\Escaper;
 
-/**  @var $block Toolbar */
-/**  @var $escaper Escaper */
+/** @var Toolbar $block */
+/** @var Escaper $escaper */
 ?>
 <div class="toolbar-sorter sorter flex items-center order-1 col-span-3 sm:col-span-6
         md:col-span-3 lg:col-span-6 justify-end">
