--- a/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
@@ -11,8 +11,8 @@ declare(strict_types=1);
 use Magento\Catalog\Block\Product\ProductList\Toolbar;
 use Magento\Framework\Escaper;
 
-/**  @var $block Toolbar */
-/**  @var $escaper Escaper */
+/** @var Toolbar $block */
+/** @var Escaper $escaper */
 ?>
 <?php if ($block->isEnabledViewSwitcher()): ?>
     <div class="modes flex space-x-1 mr-2 items-center px-2 py-2 rounded-md border
