--- a/Magento_ProductAlert/templates/email/price.phtml
+++ b/Magento_ProductAlert/templates/email/price.phtml
@@ -20,7 +20,7 @@ use Magento\ProductAlert\Block\Email\Price;
             ) ?>
     </p>
     <table>
-    <?php /** @var $product Product */ ?>
+    <?php /** @var Product $product */ ?>
     <?php foreach ($products as $product): ?>
         <tr>
             <td class="col photo">
