--- a/Magento_Sales/templates/order/invoice.phtml
+++ b/Magento_Sales/templates/order/invoice.phtml
@@ -6,7 +6,7 @@
  * See https://hyva.io/license
  */
 
-/* @var $block \Magento\Sales\Block\Order\Invoice */
+/** @var \Magento\Sales\Block\Order\Invoice $block */
 ?>
 <?php $order = $block->getOrder() ?>
 <div class="md:flex md:justify-between items-center mb-3">
