ADD: elevation to offcanvas

--- a/Magento_Theme/templates/html/cart/cart-drawer.phtml
+++ b/Magento_Theme/templates/html/cart/cart-drawer.phtml
@@ -81,7 +81,7 @@ use Magento\Framework\View\Element\Template;
              aria-modal="true"
              @click.away="open = false"
              class="fixed inset-y-0 right-0 z-30 flex max-w-full">
-            <div class="relative w-screen max-w-md"
+            <div class="relative w-screen max-w-md shadow-2xl"
                  x-show="open"
                  x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700"
                  x-transition:enter-start="translate-x-full"
