--- a/Magento_Catalog/layout/catalog_product_compare_index.xml
+++ b/Magento_Catalog/layout/catalog_product_compare_index.xml
@@ -21,6 +21,9 @@
                 <block name="catalog.compare.list.compare_init"
                        as="compare_init"
                        template="Magento_Catalog::product/compare/init.phtml"/>
+                <block name="category.products.list.wishlist_init"
+                       as="wishlist_init"
+                       template="Magento_Wishlist::init.phtml"/>
             </block>
         </referenceContainer>
     </body>
