--- a/Magento_Catalog/templates/product/compare/list.phtml
+++ b/Magento_Catalog/templates/product/compare/list.phtml
@@ -32,10 +32,22 @@ $attributesViewModel = $viewModels->require(ProductAttributes::class);
 <?php $total = $block->getItems()->getSize(); ?>
 <?php if ($total): ?>
 <?= $block->getChildHtml('compare_init'); ?>
+<?= $block->getChildHtml('wishlist_init'); ?>
+<script defer>
+function initPrint() {
+    return {
+        print: function() {
+            window.print();
+        }
+    };
+}
+</script>
 <section>
-    <a href="#" title="<?= $escaper->escapeHtmlAttr(__('Print This Page')) ?>">
+    <button x-data="initPrint()"
+            @click.prevent="window.print()"
+            title="<?= $escaper->escapeHtmlAttr(__('Print This Page')) ?>">
         <span><?= $escaper->escapeHtml(__('Print This Page')) ?></span>
-    </a>
+    </button>
     <table class="table-auto">
         <caption <?= $escaper->escapeHtml(__('Compare Products')) ?></caption>
         <tbody>
@@ -68,8 +80,14 @@ $attributesViewModel = $viewModels->require(ProductAttributes::class);
                                       action="<?= $escaper->escapeUrl($compareHelper->getAddToCartUrl($product)) ?>"
                                       method="post">
                                     <?= $block->getBlockHtml('formkey') ?>
-                                    <button type="submit">
-                                        <span><?= $escaper->escapeHtml(__('Add to Cart')) ?></span>
+                                    <button type="submit"
+                                            class="w-auto mr-auto btn btn-primary justify-center text-sm px-4 md:px-2 lg:px-4"
+                                            aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
+                                    >
+                                        <svg class="h-6 w-6 border-current inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"/>
+                                        </svg>
+                                        <span class="inline md:hidden lg:inline"><?= $escaper->escapeHtml(__('Add to Cart')) ?></span>
                                     </button>
                                 </form>
                             <?php else: ?>
@@ -85,18 +103,25 @@ $attributesViewModel = $viewModels->require(ProductAttributes::class);
                             <?php endif; ?>
                         </div>
                         <?php if ($wishlistHelper->isAllow()): ?>
-                            <div>
-                                <a href="#"
-                                   data-post='<?= /* @noEscape */ $block->getAddToWishlistParams($product) ?>'
-                                   data-action="add-to-wishlist">
-                                    <span><?= $escaper->escapeHtml(__('Add to Wish List')) ?></span>
-                                </a>
-                            </div>
+                            <button x-data="initWishlist()"
+                                    @click.prevent="addToWishlist(<?= (int)$product->getId() ?>)"
+                                    aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Wish List')) ?>"
+                                    class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 hover:text-red-600 ml-4">
+                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+                                     viewBox="0 0 24 24">
+                                    <path
+                                        d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"/>
+                                </svg>
+                            </button>
                         <?php endif; ?>
                         <button x-data="initCompare()"
                                 @click.prevent="removeFromCompare(<?= (int)$product->getId() ?>)"
+                                aria-label="<?= $escaper->escapeHtmlAttr(__('Remove Product')) ?>"
+                                class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 hover:text-red-600 ml-4"
                                 title="<?= $escaper->escapeHtmlAttr(__('Remove Product')) ?>">
-                            <span><?= $escaper->escapeHtml(__('Remove Product')) ?></span>
+														<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-5 h-5">
+															<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+														</svg>
                         </button>
                     </div>
                 </td>
