--- a/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/Magento_Catalog/templates/product/view/product-info.phtml
@@ -174,22 +174,15 @@ $showAddToCompare = $compareViewModel->showOnProductPage();
         <script defer>
             function initCompare() {
                 return {
-                    removeFromCompare: function(productId) {
+                    addToCompare: function (productId) {
                         const formKey = document.querySelector('input[name=form_key]').value;
-                        const postUrl = BASE_URL + 'catalog/product_compare/remove/';
-                        const confirmMessage = "<?= $escaper->escapeHtml(__('Are you sure you want to remove this item from your Compare Products list?')) ?>";
-                        if (!window.confirm(confirmMessage)) {
-                            return;
-                        }
+                        const postUrl = BASE_URL + 'catalog/product_compare/add/';
 
                         fetch(postUrl, {
                             "headers": {
                                 "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
                             },
-                            "body": (
-                                "form_key=" + formKey + "&product=" + productId +
-                                "&uenc=" + btoa(window.location.href)
-                            ),
+                            "body": "form_key="+ formKey + "&product="+productId+"&uenc="+btoa(window.location.href),
                             "method": "POST",
                             "mode": "cors",
                             "credentials": "include"
@@ -202,19 +195,17 @@ $showAddToCompare = $compareViewModel->showOnProductPage();
                                 typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                                     [{
                                         type: "warning",
-                                        text: "<?= $escaper->escapeHtml(__('Could not remove item from compare.')) ?>"
+                                        text: "<?= $escaper->escapeHtml(__('Could not add item to compare.')) ?>"
                                     }], 5000
                                 );
                             }
                         }).then(function (response) {
-                            if (!response) {
-                                return;
-                            }
+                            if (!response) { return; }
                             typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                                 [{
                                     type: (response.success) ? "success" : "error",
                                     text: (response.success)
-                                        ? "<?= $escaper->escapeHtml(__("You removed product %1 from the comparison list", __("Product"))) ?>"
+                                        ? "<?= $escaper->escapeHtml(__("You added product %1 to the comparison list", __("Product"))) ?>"
                                         : response.error_message
                                 }], 5000
                             );
