--- a/web/tailwind/components/structure.css
+++ b/web/tailwind/components/structure.css
@@ -7,12 +7,15 @@ body {
 
 .container {
     @apply mx-auto px-6;
+    
+    &-desktop {
+        @apply w-full md:max-w-screen-md md:mx-auto md:px-6 lg:max-w-screen-lg xl:max-w-screen-xl;
+    }
 }
-
 
 .flex-columns-wrapper {
     @apply flex flex-col;
-
+    
     @screen md {
         @apply flex-row;
     }
@@ -20,15 +23,15 @@ body {
 
 .columns {
     @apply flex flex-wrap order-first flex-col;
-
+    
     .sidebar,
     .main {
         @apply w-full;
     }
-
+    
     @screen md {
         @apply flex-row;
-
+        
         .sidebar {
             @apply w-1/3 pr-8;
         }
@@ -40,7 +43,7 @@ body {
     .columns .main {
         @apply w-full;
     }
-
+    
     @screen md {
         .columns .main {
             @apply w-2/3;
@@ -50,8 +53,8 @@ body {
 
 .product-image-container {
     width: 100% !important;
-
+    
     img {
-        width: 100%
+        width: 100%;
     }
 }
