--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -2178,6 +2178,25 @@ section#messages a {
           line-height: 1.5rem;
         }
 
+.modal {
+  /*
+   * TODO: add tailwind classes used for the cart and modal styles
+   * Makeing the modal and offcanvs styles theme specific and mor adjustable
+   */
+}
+
+.backdrop {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.25;
+  display: flex;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
 .snap {
   -ms-scroll-snap-type: x mandatory;
   scroll-snap-type: x mandatory;
