Add rendering case for description and short_description in compare list

--- a/Magento_Catalog/templates/product/compare/list.phtml
+++ b/Magento_Catalog/templates/product/compare/list.phtml
@@ -279,6 +279,16 @@ function initWishlist() {
                                             case 'small_image': ?>
                                                 <?= $block->getImage($product, 'product_small_image')->toHtml(); ?>
                                                 <?php break;
+                                            case 'short_description':
+                                            case 'description': ?>
+                                                    <?php
+                                                    $attributeData = $attributesViewModel->getAttributeData(
+                                                        $attribute,
+                                                        $product
+                                                    )
+                                                    ?>
+                                                    <?= /* @noEscape */ $attributeData['value'] ?>
+                                                <?php break;
                                             default :?>
                                                     <?php
                                                     $attributeData = $attributesViewModel->getAttributeData(
