Un-nest button styles so can be used with @apply
* Allows reuse of these utility classes within further @apply directives
* Add missing btn class in link template

--- a/Magento_Checkout/templates/onepage/link.phtml
+++ b/Magento_Checkout/templates/onepage/link.phtml
@@ -17,7 +17,7 @@ use Magento\Framework\Escaper;
         {url: '<?= $escaper->escapeHtmlAttr($escaper->escapeUrl($block->getCheckoutUrl())) ?>'});"
         href="<?= $escaper->escapeHtmlAttr($escaper->escapeUrl($block->getCheckoutUrl())) ?>"
         title="<?= $escaper->escapeHtmlAttr(__('Proceed to Checkout')) ?>"
-        class="btn-primary rounded text-lg font-medium py-4 px-10 checkout mr-2
+        class="btn btn-primary rounded text-lg font-medium py-4 px-10 checkout mr-2
             <?= ($block->isDisabled()) ? ' disabled' : '' ?>"
         <?php if ($block->isDisabled()): ?>
             disabled="disabled"
