--- a/Magento_Catalog/templates/product/compare/list.phtml
+++ b/Magento_Catalog/templates/product/compare/list.phtml
@@ -195,7 +195,7 @@ function initWishlist() {
                                     </a>
                                 </strong>
                                 <?= /* @noEscape */ $block->getProductPrice($product, '-compare-list-top') ?>
-                                <div class="flex mt-auto pt-3">
+                                <div class="flex mt-auto pt-3 items-center">
                                     <?php if ($product->isSaleable()): ?>
                                         <form data-role="tocart-form"
                                             action="<?= $escaper->escapeUrl($compareHelper->getAddToCartUrl($product)) ?>"
@@ -217,7 +217,7 @@ function initWishlist() {
                                         <button x-data="initWishlist()"
                                             @click.prevent="addToWishlist(<?= (int)$product->getId() ?>)"
                                             aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Wish List')) ?>"
-                                            class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex flex-shrink-0 items-center justify-center text-gray-500 hover:text-red-600 ml-2">
+                                            class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex flex-shrink-0 items-center justify-center text-gray-500 hover:text-red-600 ml-2">
                                             <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
                                                 viewBox="0 0 24 24">
                                                 <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"/>
@@ -227,7 +227,7 @@ function initWishlist() {
                                     <button x-data="initCompare()"
                                         @click.prevent="removeFromCompare(<?= (int)$product->getId() ?>)"
                                         aria-label="<?= $escaper->escapeHtmlAttr(__('Remove Product')) ?>"
-                                        class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex flex-shrink-0 items-center justify-center text-gray-500 hover:text-black ml-2"
+                                        class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex flex-shrink-0 items-center justify-center text-gray-500 hover:text-black ml-2"
                                         title="<?= $escaper->escapeHtmlAttr(__('Remove Product')) ?>">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-5 h-5">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
