--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -64,7 +64,7 @@ $mediumHeight = $block->getImageAttribute('product_page_image_medium', 'height',
                 <img
                     alt="main product photo"
                     class="object-contain object-center w-full h-auto max-h-75"
-                    :class="{'opacity-0': active!==0, 'cursor-pointer': !fullscreen }"
+                    :class="{'opacity-0': active!==0, 'cursor-pointer': !fullscreen, 'opacity-0': fullscreen }"
                     loading="lazy"
                     src="<?= /* @noEscape */ $mainImageData ?>"
                     width="<?= /* @noEscape */ $mediumWidth ?>"
