DEL: object styles from a iframe element
Has no effect on this

--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -85,19 +85,17 @@ $mediumHeight = $block->getImageAttribute('product_page_image_medium', 'height',
                         x-show.transition.opacity.duration.400ms="active===index"
                     />
                 </template>
-                <div class="absolute inset-0 hidden object-center w-full h-full bg-white object-fit nonmobile"
+                <div class="absolute inset-0 hidden w-full h-full bg-white nonmobile"
                      :class="{ 'hidden': activeVideoType !== 'youtube' }"
-                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' &&
-                      activeVideoType === 'youtube'"
+                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' && activeVideoType === 'youtube'"
                 >
-                    <div id="youtube-player" class="object-center w-full h-full object-fit"></div>
+                    <div id="youtube-player" class="w-full h-full"></div>
                 </div>
-                <div class="absolute inset-0 hidden object-center w-full h-full bg-white object-fit"
+                <div class="absolute inset-0 hidden w-full h-full bg-white"
                      :class="{ 'hidden': activeVideoType !== 'vimeo' }"
-                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' &&
-                      activeVideoType === 'vimeo'"
+                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' && activeVideoType === 'vimeo'"
                 >
-                    <div id="vimeo-player" class="object-center w-full h-full object-fit"></div>
+                    <div id="vimeo-player" class="w-full h-full"></div>
                 </div>
             </div>
         </div>
