Fixes to gallery.phtml and recompile of CSS
`:class="{'opacity-0': active!==0, 'cursor-pointer': !fullscreen, 'opacity-0': fullscreen }"` this adds `opacity-0` when `active!==0` but then removes it again when `fullscreen === true`.

Instead, we're now just hiding the main image when JS is loaded by default

Added back `w-full` since images otherwise did not fill up the image container (when not in fullscreen).

slowed down transitions by an extra 100ms.

--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -61,10 +61,19 @@ $mediumHeight = $block->getImageAttribute('product_page_image_medium', 'height',
              x-transition:enter-end="opacity-100"
         >
             <div class="relative mb-6">
+                <?php
+                /**
+                 * The first image is a placeholder that determines the
+                 * aspect ratio for the gallery. It will be hidden as
+                 * soon as JS is loaded, but will keep reserving the
+                 * necessary space in the layout for the other (absolute positioned)
+                 * images. Hence `opacity-0` instead of `x-show` or `hidden`
+                 */
+                ?>
                 <img
                     alt="main product photo"
                     class="object-contain object-center w-full h-auto max-h-75"
-                    :class="{'opacity-0': active!==0, 'cursor-pointer': !fullscreen, 'opacity-0': fullscreen }"
+                    :class="'opacity-0'"
                     loading="lazy"
                     src="<?= /* @noEscape */ $mainImageData ?>"
                     width="<?= /* @noEscape */ $mediumWidth ?>"
@@ -76,24 +85,24 @@ $mediumHeight = $block->getImageAttribute('product_page_image_medium', 'height',
                         :alt="image.caption"
                         :title="image.caption"
                         @click="fullscreen = true"
-                        class="absolute inset-0 object-contain object-center max-h-75 m-auto"
+                        class="absolute inset-0 object-contain object-center w-full m-auto max-h-75"
                         :class="{ 'cursor-pointer': !fullscreen }"
                         width="<?= /* @noEscape */ $mediumWidth ?>"
                         height="<?= /* @noEscape */ $mediumHeight ?>"
                         loading="lazy"
                         :src="fullscreen ? image.full : image.img"
-                        x-show.transition.opacity.duration.400ms="active===index"
+                        x-show.transition.opacity.duration.500ms="active===index"
                     />
                 </template>
                 <div class="absolute inset-0 hidden w-full h-full bg-white nonmobile"
                      :class="{ 'hidden': activeVideoType !== 'youtube' }"
-                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' && activeVideoType === 'youtube'"
+                     x-show.transition.opacity.duration.500ms="images[active].type === 'video' && activeVideoType === 'youtube'"
                 >
                     <div id="youtube-player" class="w-full h-full"></div>
                 </div>
                 <div class="absolute inset-0 hidden w-full h-full bg-white"
                      :class="{ 'hidden': activeVideoType !== 'vimeo' }"
-                     x-show.transition.opacity.duration.400ms="images[active].type === 'video' && activeVideoType === 'vimeo'"
+                     x-show.transition.opacity.duration.500ms="images[active].type === 'video' && activeVideoType === 'vimeo'"
                 >
                     <div id="vimeo-player" class="w-full h-full"></div>
                 </div>
